styles/style.css
/* Базові стилі */

body {
  background-color: black;
  color: white;
  font-family: "Ruda", sans-serif;
  font-weight: 400;
  font-size: 24px;
  line-height: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

body h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Quattrocento", serif;
}

/* Стилі карточок меню */

.mainContainer {
  max-width: 1440px;
}

.pizzaSection {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.pizzaCard {
  max-width: 650px;
  font-size: 16px;
  display: flex;
  flex-direction: row;
  margin-top: 50px;
}

.pizzaCard:nth-child(odd) {
  margin-left: 20px;
}

.pizzaCard:hover,
.pizzaCard:focus {
  border: 1px solid rgba(242, 201, 76, 1);
  -webkit-box-shadow: 0px 0px 10px 3px rgba(242, 201, 76, 0.73);
  -moz-box-shadow: 0px 0px 10px 3px rgba(242, 201, 76, 0.73);
  box-shadow: 0px 0px 10px 3px rgba(242, 201, 76, 0.73);
}

.pizzaCard h5 {
  font-size: 20px;
  text-transform: uppercase;
  margin: 0;
  font-family: "Ruda", sans-serif;
  font-weight: 400;
}

.cardBody {
  margin-right: 20px;
  margin-left: 20px;
}

.pizzaList {
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style-type: none;
  padding: 0;
  font-size: 20px;
  color: rgba(242, 201, 76, 1);
}

.pizzaPhoto {
  width: 100%;
  max-width: 273px;
  aspect-ratio: 1 / 1;
  object-fit: cover;
}

/* Стилі для відображення на різних девайсах */

@media (max-width: 768px) {
}

@media (max-width: 480px) {
  .pizzaCard {
    max-width: 80%;
    font-size: 14px;
    display: flex;
    flex-direction: column;
    margin-top: 30px;
    margin-left: 0;
  }
  .pizzaCards {
    display: flex;
    justify-content: center;
    border: 1px solid rgba(242, 201, 76, 1);
    margin-bottom: 30px;
  }

  .cardBody {
    margin: 0;
    text-align: center;
  }
}

.cardsPizza{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 10px;
}


.mainTop{
    display: flex;
    flex-direction: column;
    height: 1024px;
    width: 1440px;
    justify-content:flex-end;
    align-items:center;
    row-gap: 22px;
    /* column-gap: 35px; */

    background-image: 
        url("../images/Rectangle_2.png"), 
        url("../images/wood-2045380_1920.png")
        ;
    background-position:bottom;
}

.lineUnderBrandName{
    height: 4px;
    width: 482px;
    justify-content: center;
    background-color: #F2C94C;
    /* border: 1px solid yellow"; */
}


.brandDescription{
    height: 201px;
    width: 745px;
    /* border: 2px solid burlywood; */
    color: white;
    font-size: 28px;
    text-align: justify;
    ;
}

.branName{
    height: 67px;
    max-width: 100%;
    width: 806px;
    /* border: 2px solid burlywood; */
    text-align:center;
    text-transform: uppercase;
    font-family: "Quattrocento", serif;


    color: white;
    /* font-family:monospace; */
    font-size:72px;
    /* font-size: 18px; */
    font-weight: bold;
}

/* .pizza-3000285_1920{

} */

